--- a/src/app.html
+++ b/src/app.html
@@ -24,7 +24,8 @@
 			rel="stylesheet"
 		/>
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="relative">
 		<div style="display: contents">%sveltekit.body%</div>
+		<div class="pointer-events-none absolute top-0 h-full w-full bg-grain opacity-35"></div>
 	</body>
 </html>
