feat: add Docker support, update dependencies, and enhance SEO metadata

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,16 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://caiquetorres.com/" />
+		<meta property="og:title" content="Caique Torres" />
+		<meta
+			property="og:description"
+			content="Caique Torres is a software engineer specializing in building exceptional digital experiences."
+		/>
+		<meta property="og:image" content="https://caiquetorres.com/banner.jpg" />
+
 		%sveltekit.head%
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
